@@ -163,6 +163,9 @@ New Features
 * SOLR-6650: Add optional slow request logging at WARN level
   (Jessica Cheng Mallet via Timothy Potter)
 
+* SOLR-6655: SimplePostTool now features -Dhost, -Dport, and -Dc (for core/collection)
+  properties to allow easier overriding of just the right piece of the Solr URL. 
+
 Bug Fixes
 ----------------------
 
@@ -352,7 +355,7 @@ Bug Fixes
 * SOLR-6425: If using the new global hdfs block cache option, you can end up
   reading corrupt files on file name reuse. (Mark Miller, Gregory Chanan)
 
-* SOLR-5814: CoreContainer reports incorrect & missleading path for solrconfig.xml 
+* SOLR-5814: CoreContainer reports incorrect & misleading path for solrconfig.xml
   when there are loading problems (Pradeep via hossman)
 
 * SOLR-6024: Fix StatsComponent when using docValues="true" multiValued="true"
